[[bin]]
name = "day01"
path = "src/day01/part1.rs"

[[bin]]
name = "day02"
path = "src/day02/part1.rs"

[[bin]]
name = "day03"
path = "src/day03/part1.rs"

[[bin]]
name = "day04"
path = "src/day04/part1.rs"

[[bin]]
name = "day05"
path = "src/day05/part1.rs"

[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
