[[bin]]
name = "Trebuchet"
path = "src/Applications/Trebuchet/part1.rs"

[[bin]]
name = "CubeConundrum"
path = "src/Applications/CubeConundrum/part1.rs"

[[bin]]
name = "GearRatios"
path = "src/Applications/GearRatios/part1.rs"

[[bin]]
name = "Scratchcards"
path = "src/Applications/Scratchcards/part1.rs"

[[bin]]
name = "SeedFertilizer"
path = "src/Applications/SeedFertilizer/src/part1.rs"

[[bin]]
name = "WaitForIt"
path = "src/Applications/WaitForIt/src/part1.rs"

[[bin]]
name = "CamelCards"
path = "src/Applications/CamelCards/src/part1.rs"

[[bin]]
name = "HauntedWasteland"
path = "src/Applications/HauntedWasteland/src/part1.rs"

[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
rstest = "0.18.2"
